--- a/src/Converters/Converters/Converters.csproj
+++ b/src/Converters/Converters/Converters.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpperTextConverter.cs" />
     <Compile Include="ValueConversionAttribute.cs" />
+    <Compile Include="ValueConverterGroup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
