--- a/src/Converters/Converters.Tests/Converters.Tests.csproj
+++ b/src/Converters/Converters.Tests/Converters.Tests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="LowerTextTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpperTextTests.cs" />
+    <Compile Include="ValueConverterGroupTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Converters\Converters.csproj">
