--- a/src/Animations/Animations.Android/Animations.Android.csproj
+++ b/src/Animations/Animations.Android/Animations.Android.csproj
@@ -105,8 +105,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Animations\Animations.csproj">
-      <Project>{67f9d3a8-f71e-4428-913f-c37ae82cdb24}</Project>
-      <Name>FormsCommunityToolkit.Animations</Name>
+      <Project>{572b958e-cc33-47c1-95fa-1b3a0506f2ed}</Project>
+      <Name>Animations</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
