--- a/src/Controls/Controls.iOS/Controls.iOS.csproj
+++ b/src/Controls/Controls.iOS/Controls.iOS.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CheckBoxRenderer.cs" />
+    <Compile Include="Controls.cs" />
     <Compile Include="Views\CheckBoxView.cs" />
   </ItemGroup>
   <ItemGroup>
