--- a/src/Animations/Animations/Animations.csproj
+++ b/src/Animations/Animations/Animations.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Animations\Base\AnimationBase.cs" />
     <Compile Include="Animations\BounceAnimation.cs" />
+    <Compile Include="Animations\ColorAnimation.cs" />
     <Compile Include="Animations\EasingType.cs" />
     <Compile Include="Animations\FadeAnimation.cs" />
     <Compile Include="Animations\FlipAnimation.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Animations\TurnstileAnimation.cs" />
     <Compile Include="Behaviors\BeginAnimationBehavior.cs" />
     <Compile Include="Extensions\AnimationExtension.cs" />
+    <Compile Include="Extensions\ColorExtensions.cs" />
     <Compile Include="Helpers\EasingHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Triggers\BeginAnimation.cs" />
