--- a/nuget/Behaviors.nuspec
+++ b/nuget/Behaviors.nuspec
@@ -25,7 +25,7 @@
    <files>
       <!--Core-->
      <file src="src\Behaviors\Behaviors\bin\Release\XamarinCommunityToolkit.Behaviors.dll" target="lib\netstandard2.0" />
-     <file src="src\Behaviors\Behaviors\bin\Release\XamarinCommunityToolkit.Behaviors.xml" target="lib\netstandard2.0" />
-     <file src="src\Behaviors\Behaviors\bin\Release\XamarinCommunityToolkit.Behaviors.pdb" target="lib\netstandard2.0" />
+     <file src="src\Behaviors\Behaviors\bin\Release\XamarinCommunityToolkit.Behaviors.*xml" target="lib\netstandard2.0" />
+     <file src="src\Behaviors\Behaviors\bin\Release\XamarinCommunityToolkit.Behaviors.*pdb" target="lib\netstandard2.0" />
    </files>
 </package>
