--- a/nuget/Converters.nuspec
+++ b/nuget/Converters.nuspec
@@ -25,7 +25,7 @@
    <files>
       <!--Core-->
      <file src="src\Converters\Converters\bin\Release\XamarinCommunityToolkit.Converters.dll" target="lib\netstandard2.0" /> 
-     <file src="src\Converters\Converters\bin\Release\XamarinCommunityToolkit.Converters.xml" target="lib\netstandard2.0" />
-     <file src="src\Converters\Converters\bin\Release\XamarinCommunityToolkit.Converters.pdb" target="lib\netstandard2.0" />
+     <file src="src\Converters\Converters\bin\Release\XamarinCommunityToolkit.Converters.*xml" target="lib\netstandard2.0" />
+     <file src="src\Converters\Converters\bin\Release\XamarinCommunityToolkit.Converters.*pdb" target="lib\netstandard2.0" />
    </files>
 </package>
