--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,7 @@ trigger:
   branches:
     include:
     - main
+    - develop
   tags:
     include:
     - '*'
@@ -37,6 +38,7 @@ pr:
   branches:
     include:
     - main
+    - develop
   paths:
     exclude:
     - README.md
